Fri Feb  1 19:46:34 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * man/nutupsdrv.8:
   - mention that "-a" argument is mandatory when calling the driver directly.
   - complete the Drivers list

Fri Feb  1 19:27:43 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - man/dummy-ups.8: remove the reference to direct driver launching and
   make some other update. [Alioth Bug #310543]
   
Fri Feb  1 15:22:04 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - include/common.h: move the config.h include before timehead.h so
   that this last use it (thanks to Thomas Jarosch).

Wed Jan 30 04:43:17 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.17) Added preliminary code to test setting
   the unit ID.

Wed Jan 30 04:23:47 UTC 2008 / Charles Lepple <clepple@gmail.com>

 * packaging/debian:
   - Fix makefile.am so that all files currently in the directory get
     distributed (compat was missing from the tarball)
   - Comment out a line in rules which was causing .debs to fail

Tue Jan 29 01:51:16 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - driver.list: update compatibility information for Oneac models (list all
   combinations for the more recent models, and just the base model name for
   units from ~2001).

Tue Jan 29 00:36:35 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/tripplite_usb.8: Regenerate man page for tripplite_usb(8)

Tue Jan 29 00:31:55 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: (rev 0.16) More debugging and logging for
   protocol 0004.

Mon Jan 28 11:28:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * driver.list: add compatibility information for
   - Atlantis Land and Mustek Powermust Office 650 (reported by
     Andrea Zicchetti)
   - Oneac XAU models

Mon Jan 28 09:25:12 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * dummy-ups update:
   - variable values are not truncated anymore when loading the
     .dev file,