@@ -1,0 +1,10 @@
+
+if WITH_HAL
+ halfdidir = $(HAL_FDI_PATH)/
+ halfdi_DATA = 20-ups-nut-device.fdi
+endif
+
+20-ups-nut-device.fdi: ups-nut-device.fdi
+	cp ups-nut-device.fdi 20-ups-nut-device.fdi
+
+MOSTLYCLEANFILES = 20-ups-nut-device.fdi
